feat: add routes news and tournaments to be consumed by the app

--- a/package.json
+++ b/package.json
@@ -15,8 +15,11 @@
     "@tabler/icons-react": "^3.34.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.10.0",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.511.0",
+    "mongodb": "^6.17.0",
+    "mongoose": "^8.16.4",
     "motion": "^12.19.2",
     "next": "15.3.2",
     "react": "^19.0.0",
