--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
     "mongoose": "^8.16.4",
     "motion": "^12.19.2",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.61.1",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tw-animate-css": "^1.3.4",
     "zod": "^3.25.76"
