--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "firebase": "^11.10.0",
+    "firebase-admin": "^13.4.0",
     "keen-slider": "^6.8.6",
     "lucide-react": "^0.511.0",
     "mongodb": "^6.17.0",
